<resources>
    <string name="app_name">秋秋</string>
    <string name="login">登录</string>
    <string name="login_qiuqiu">登录秋秋</string>
    <string name="regsiter_qiuqiu">注册秋秋</string>
    <string name="qiuqiu_number">秋秋号</string>
    <string name="password">密码</string>
    <string name="password_again">再次密码</string>
    <string name="register_account">注册账号</string>
    <string name="security_center">安全中心</string>
    <string name="emergency_freeze">紧急冻结</string>
    <string name="forget_password">忘记密码？</string>
    <string name="please_enter_username">请输入用户名</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_enter_password_again">请再次输入密码</string>
    <string name="login_success">登录成功！</string>
    <string name="register_success">注册成功！</string>
    <string name="chat">聊天</string>
    <string name="my">我的</string>

    <string name="header_search_behavior">com.yszln.qiuqiu.ui.main.view.behavior.HeaderSearchBehavior</string>
    <string name="header_scrolling_behavior">com.yszln.qiuqiu.ui.main.view.behavior.HeaderScrollingBehavior</string>
    <string name="header_logo_behavior">com.yszln.qiuqiu.ui.main.view.behavior.HeaderLogoBehavior</string>
    <string name="linkman">联系人</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>